# llmcp_client

./: .gitignore  README.md  llmcp_selectors.json  llmcp_ui.py  pyproject.toml  requirements.txt
llm/: claude.py
mcp/: mcp_server.py  mcp_streaming_server.py
networks/: socket_server.py
tools/: selector_dialog.py  tooltip.py
ui_generators/: ai_tab.py  debugger_tab.py  detail_panel.py  log_tab.py  mcp_proxy.py  mcp_tab.py  selector_tab.py  toolkit_ui.py
