[project]
name = "llmcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiohttp-cors>=0.8.1",
    "cryptography>=46.0.1",
    "mcp>=1.14.1",
    "requests>=2.32.5",
    "websockets>=15.0.1",
]
